# rs_fast_image_viewer

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
shaders/: image.wgsl
src/: config.rs  image_handler.rs  main.rs  viewer.rs
