[package]
name = "rs_fast_image_viewer"
version = "0.3.0"
edition = "2024"
description = "High-speed image viewer with WebP and PSD support"
authors = ["kznagamori"]
license = "MIT"

[[bin]]
name = "rs_fast_image_viewer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
fern = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
image = { version = "0.25", features = ["webp", "jpeg", "png"] }
psd = "0.3"
winit = "0.30"
wgpu = { version = "26", features = ["wgsl"] }
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
